Add Project references, remove redundant file

--- a/HarvestHub.Modules.Users.Api/HarvestHub.Modules.Users.Api.csproj
+++ b/HarvestHub.Modules.Users.Api/HarvestHub.Modules.Users.Api.csproj
@@ -6,4 +6,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\HarvestHub.Modules.Users.Core\HarvestHub.Modules.Users.Core.csproj" />
+  </ItemGroup>
+
 </Project>
