Add dbContext Configuration

--- a/HarvestHub.Bootstraper/appsettings.json
+++ b/HarvestHub.Bootstraper/appsettings.json
@@ -5,5 +5,10 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+
+  "sqlServer": {
+    "ConnectionString": "Server=(localdb)\\Local;Database=HarvestHubDb;Trusted_Connection=True;"
+  },
+
   "AllowedHosts": "*"
 }
