--- a/HarvestHub.Modules.Users.Dal/HarvestHub.Modules.Users.Dal.csproj
+++ b/HarvestHub.Modules.Users.Dal/HarvestHub.Modules.Users.Dal.csproj
@@ -11,4 +11,8 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="7.0.13" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\HarvestHub.Modules.Users.Shared\HarvestHub.Modules.Users.Shared.csproj" />
+  </ItemGroup>
+
 </Project>
