Register UsersModule in Bootstraper

--- a/HarvestHub.Bootstraper/HarvestHub.Bootstraper.csproj
+++ b/HarvestHub.Bootstraper/HarvestHub.Bootstraper.csproj
@@ -15,4 +15,8 @@
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\HarvestHub.Modules.Users.Api\HarvestHub.Modules.Users.Api.csproj" />
+  </ItemGroup>
+
 </Project>
