--- a/HarvestHub.Bootstraper/appsettings.json
+++ b/HarvestHub.Bootstraper/appsettings.json
@@ -6,6 +6,13 @@
     }
   },
 
+  "JwtSettings": {
+    "Secret": "super-secret-key",
+    "ExpiryMinutes": 60,
+    "Issuer": "HarvestHub",
+    "Audience": "HarvestHub"
+  },
+
   "sqlServer": {
     "ConnectionString": "Server=(localdb)\\Local;Database=HarvestHubDb;Trusted_Connection=True;"
   },
