Add inMemory message bus, Add notifications module

--- a/HarvestHub.Bootstraper/HarvestHub.Bootstraper.csproj
+++ b/HarvestHub.Bootstraper/HarvestHub.Bootstraper.csproj
@@ -16,6 +16,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\HarvestHub.Modules.Notifications.Api\HarvestHub.Modules.Notifications.Api.csproj" />
     <ProjectReference Include="..\HarvestHub.Modules.Users.Api\HarvestHub.Modules.Users.Api.csproj" />
   </ItemGroup>
 
