--- a/HarvestHub.Bootstraper/appsettings.json
+++ b/HarvestHub.Bootstraper/appsettings.json
@@ -13,6 +13,11 @@
     "Audience": "HarvestHub"
   },
 
+  "SmtpOptions": {
+    "Host": "smtp.gmail.com",
+    "Port": 587
+  },
+
   "sqlServer": {
     "ConnectionString": "Server=(localdb)\\Local;Database=HarvestHubDb;Trusted_Connection=True;"
   },
