--- a/HarvestHub.Bootstraper/appsettings.json
+++ b/HarvestHub.Bootstraper/appsettings.json
@@ -13,6 +13,10 @@
     "Audience": "HarvestHub"
   },
 
+  "users": {
+    "passwordResetTokenExpiry": "00.01:00:00"
+  },
+
   "SmtpOptions": {
     "Host": "smtp.gmail.com",
     "Port": 587
