--- a/HarvestHub.Bootstraper/appsettings.json
+++ b/HarvestHub.Bootstraper/appsettings.json
@@ -8,7 +8,7 @@
 
   "JwtSettings": {
     "Secret": "super-secret-key",
-    "ExpiryMinutes": 60,
+    "Expiry": "00.01:00:00",
     "Issuer": "HarvestHub",
     "Audience": "HarvestHub"
   },
