--- a/HarvestHub.Bootstraper/HarvestHub.Bootstraper.csproj
+++ b/HarvestHub.Bootstraper/HarvestHub.Bootstraper.csproj
@@ -17,6 +17,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\HarvestHub.Modules.Fields.Api\HarvestHub.Modules.Fields.Api.csproj" />
     <ProjectReference Include="..\HarvestHub.Modules.Notifications.Api\HarvestHub.Modules.Notifications.Api.csproj" />
     <ProjectReference Include="..\HarvestHub.Modules.Users.Api\HarvestHub.Modules.Users.Api.csproj" />
   </ItemGroup>
