Register mediatr in dependency injection container

--- a/HarvestHub.Modules.Fields.Api/HarvestHub.Modules.Fields.Api.csproj
+++ b/HarvestHub.Modules.Fields.Api/HarvestHub.Modules.Fields.Api.csproj
@@ -6,4 +6,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\HarvestHub.Modules.Fields.Infrastructure\HarvestHub.Modules.Fields.Infrastructure.csproj" />
+  </ItemGroup>
+
 </Project>
