--- a/HarvestHub.Modules.Fields.Infrastructure/HarvestHub.Modules.Fields.Infrastructure.csproj
+++ b/HarvestHub.Modules.Fields.Infrastructure/HarvestHub.Modules.Fields.Infrastructure.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
@@ -7,7 +7,13 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.13" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="7.0.13" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\HarvestHub.Modules.Fields.Application\HarvestHub.Modules.Fields.Application.csproj" />
+    <ProjectReference Include="..\HarvestHub.Modules.Fields.Core\HarvestHub.Modules.Fields.Core.csproj" />
   </ItemGroup>
 
 </Project>
