--- a/HarvestHub.Modules.Fields.Application/HarvestHub.Modules.Fields.Application.csproj
+++ b/HarvestHub.Modules.Fields.Application/HarvestHub.Modules.Fields.Application.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\HarvestHub.Modules.Fields.Core\HarvestHub.Modules.Fields.Core.csproj" />
     <ProjectReference Include="..\HarvestHub.Modules.Fields.Shared\HarvestHub.Modules.Fields.Shared.csproj" />
   </ItemGroup>
 
