--- a/HarvestHub.Modules.Fields.Application/HarvestHub.Modules.Fields.Application.csproj
+++ b/HarvestHub.Modules.Fields.Application/HarvestHub.Modules.Fields.Application.csproj
@@ -9,6 +9,8 @@
   <ItemGroup>
     <ProjectReference Include="..\HarvestHub.Modules.Fields.Core\HarvestHub.Modules.Fields.Core.csproj" />
     <ProjectReference Include="..\HarvestHub.Modules.Fields.Shared\HarvestHub.Modules.Fields.Shared.csproj" />
+    <ProjectReference Include="..\HarvestHub.Modules.Notifications.Shared\HarvestHub.Modules.Notifications.Shared.csproj" />
+    <ProjectReference Include="..\HarvestHub.Modules.Users.Shared\HarvestHub.Modules.Users.Shared.csproj" />
   </ItemGroup>
 
 </Project>
