--- a/HarvestHub.Modules.Notifications.Api/HarvestHub.Modules.Notifications.Api.csproj
+++ b/HarvestHub.Modules.Notifications.Api/HarvestHub.Modules.Notifications.Api.csproj
@@ -11,6 +11,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\HarvestHub.Modules.Fields.Shared\HarvestHub.Modules.Fields.Shared.csproj" />
     <ProjectReference Include="..\HarvestHub.Modules.Notifications.Shared\HarvestHub.Modules.Notifications.Shared.csproj" />
     <ProjectReference Include="..\HarvestHub.Modules.Users.Shared\HarvestHub.Modules.Users.Shared.csproj" />
   </ItemGroup>
