--- a/HarvestHub.Modules.Fields.Application/HarvestHub.Modules.Fields.Application.csproj
+++ b/HarvestHub.Modules.Fields.Application/HarvestHub.Modules.Fields.Application.csproj
@@ -7,6 +7,12 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AutoMapper" Version="12.0.1" />
+    <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.1" />
+    <PackageReference Include="System.Text.Json" Version="7.0.3" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\HarvestHub.Modules.Fields.Core\HarvestHub.Modules.Fields.Core.csproj" />
     <ProjectReference Include="..\HarvestHub.Modules.Fields.Shared\HarvestHub.Modules.Fields.Shared.csproj" />
     <ProjectReference Include="..\HarvestHub.Modules.Notifications.Shared\HarvestHub.Modules.Notifications.Shared.csproj" />
