--- a/HarvestHub.Modules.Weather.Api/HarvestHub.Modules.Weather.Api.csproj
+++ b/HarvestHub.Modules.Weather.Api/HarvestHub.Modules.Weather.Api.csproj
@@ -1,9 +1,18 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
   </PropertyGroup>
+
+  <ItemGroup>
+    <Folder Include="Controllers\" />
+    <Folder Include="Services\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\HarvestHub.Modules.Weather.Shared\HarvestHub.Modules.Weather.Shared.csproj" />
+  </ItemGroup>
 
 </Project>
